test/users/lydia/fieldNumToNameError.good
fieldNumToNameError.chpl:7: error: '4' is not a valid field number
